--- a/article-app/src/components/Sports/Sports.css
+++ b/article-app/src/components/Sports/Sports.css
@@ -1,4 +1,4 @@
-.sports-news-container{
+div-sports{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1.5rem;
