--- a/article-app/src/components/Business/Business.css
+++ b/article-app/src/components/Business/Business.css
@@ -1,4 +1,4 @@
-.business-news-container{
+.div-business{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1.5rem;
