--- a/article-app/src/components/Technology/Technology.css
+++ b/article-app/src/components/Technology/Technology.css
@@ -1,4 +1,4 @@
-.technology-news-container{
+.div-technology{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1.5rem;
